16409
As of Scala 2.9.1, the error message present on Scala 2.8.1/2.9.0 regarding tupled functions vs multiple parameter functions is no longer clear. 2.9.0:

{code:scala}
scala> def f[A,B](m: Map[A, B], p: (A, B) => Boolean) = m partition p
<console>:5: error: type mismatch;
 found   : (A, B) => Boolean
 required: ((A, B)) => Boolean
       def f[A,B](m: Map[A, B], p: (A, B) => Boolean) = m partition p
                                                                    ^
{code:scala}

2.9.1:

{code:scala}
scala> def f[A,B](m: Map[A, B], p: (A, B) => Boolean) = m partition p
<console>:7: error: type mismatch;
 found   : (A, B) => Boolean
 required: (A, B) => Boolean
       def f[A,B](m: Map[A, B], p: (A, B) => Boolean) = m partition p
                                                                    ^
{code:scala}
